# dioteko

./: .gitignore  .gitmodules  Cargo.toml  README.md
dioteko-raylib-sys/: Cargo.toml  build.rs
dioteko-raylib-sys/lib/: wrapper.h
dioteko-raylib-sys/src/: bindings.rs  ffi.rs
dioteko-raylib-sys/src/bindings/: linux_bindings.rs  macos_bindings.rs  windows_bindings.rs
examples/core/: basic_window.rs  input_keys.rs  input_mouse.rs
src/: error.rs  ffi.rs  lib.rs  main.rs  prelude.rs
src/core/: color.rs  keyboard.rs  linalg.rs  macros.rs  mod.rs  mouse.rs  npatchinfo.rs  painter.rs  rectangle.rs  utility.rs  window.rs
src/painter/: mod.rs
src/painter/shapes/: mod.rs
src/painter/text/: mod.rs
src/painter/textures/: image.rs  mod.rs  texture.rs
src/text/: mod.rs
src/textures/: image.rs  pixel.rs  render_texture.rs  texture.rs
